[gd_scene load_steps=3 format=2]

[ext_resource path="res://weapon/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://box/DamageBox.tscn" type="PackedScene" id=2]

[node name="Bullet" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0

[node name="DamageBox" parent="Sprite" instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 126

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="Sprite/DamageBox" to="." method="_on_DamageBox_area_entered"]
[connection signal="body_entered" from="Sprite/DamageBox" to="." method="_on_DamageBox_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[editable path="Sprite/DamageBox"]
